[project]
name = "bmi_dbseabed"
requires-python = ">=3.10"
description = "Fetch ocean seabed datasets from the dbSEABED system https://instaar.colorado.edu/~jenkinsc/dbseabed/"
keywords = [
    "BMI",
    "Basic Model Interface",
    "dbSEABED",
]
authors = [
    { name = "Tian Gan", email = "jamy127@foxmail.com" },
    { name = "Chris Jenkins", email = "jenkinsc0@gmail.com" },
]
maintainers = [
    { name = "Tian Gan", email = "jamy127@foxmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Oceanography",
]
dependencies = [
    "bmipy",
    "click",
    "netcdf4",
    "numpy",
    "owslib",
    "pyyaml",
    "requests",
    "rioxarray",
    "xarray",
]
dynamic = [
    "version",
    "readme",
]

[project.license]
text = "MIT"

[project.scripts]
bmi_dbseabed = "bmi_dbseabed.cli:main"

[project.urls]
documentation = "https://github.com/gantian127/bmi_dbseabed"
homepage = "https://github.com/gantian127/bmi_dbseabed"
repository = "https://github.com/gantian127/bmi_dbseabed"

[project.optional-dependencies]
dev = [
    "nox",
]
notebooks = [
    "jupyter",
    "matplotlib",
    "numpy",
]
testing = [
    "nbmake",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.version]
attr = "bmi_dbseabed._version.__version__"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "src/bmi_dbseabed",
    "tests",
]
norecursedirs = [
    ".*",
    "*.egg*",
    "build",
    "dist",
]
addopts = [
    "--ignore=setup.py",
    "--tb=native",
    "--durations=16",
    "--strict-markers",
    "--doctest-modules",
    "-vvv",
]

[tool.zest-releaser]
tag-format = "v{version}"
python-file-with-version = "src/bmi_dbseabed/_version.py"
